# ChangeLog for sci-mathematics/axiom
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/axiom/ChangeLog,v 1.21 2008/07/15 02:39:54 markusle Exp $

  15 Jul 2008; Markus Dittrich <markusle@gentoo.org> axiom-200805.ebuild:
  Ebuild cleanup. Thanks much to <dberkholz@gentoo.org> for pointing 
  out improvements.

  13 Jul 2008; Markus Dittrich <markusle@gentoo.org> axiom-200805.ebuild:
  Switched linux-info based brk randomization check to a run-time 
  check via sysctl (see bug #186926). Thanks much to Martin Väth
  <vaeth@mathematik.uni-wuerzburg.de> for suggesting this.

*axiom-200805 (12 Jul 2008)

  12 Jul 2008; Markus Dittrich <markusle@gentoo.org> +axiom-200805.ebuild:
  Version bump. Added check that CONFIG_COMPAT_BRK is set for kernels
  >=2.6.25 since gcl compilation will fail otherwise.

*axiom-200803 (30 Mar 2008)

  30 Mar 2008; Markus Dittrich <markusle@gentoo.org>
  -files/gcl-2.6.7.fix-configure.in-gentoo.Makefile.patch,
  -files/gcl-2.6.7.fix-configure.in-gentoo.patch.input,
  -files/gcl-2.6.7.fix-out-of-build-root-compile.Makefile.patch,
  -files/gcl-2.6.7.fix-out-of-build-root-compile.patch.input,
  -axiom-3.9-r1.ebuild, +axiom-200803.ebuild:
  Version bump and removed old version.

  01 Feb 2008; Markus Dittrich <markusle@gentoo.org>
  +files/axiom-200711-gcl-configure.patch, axiom-200711.ebuild:
  Fixed broken gcl configure (see bug #208326). Thanks much to
  Martin Väth <vaeth@mathematik.uni-wuerzburg.de> for this fix.

*axiom-200711 (23 Jan 2008)

  23 Jan 2008; Markus Dittrich <markusle@gentoo.org> axiom-3.9-r1.ebuild,
  +axiom-200711.ebuild:
  Version bump (see bug #185481).

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; axiom-3.9-r1.ebuild:
  Drop virtual/x11 references.

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove plasmaroo from metadata.xml due to retirement.

  01 Oct 2006; Tim Yamin <plasmaroo@gentoo.org> axiom-3.9-r1.ebuild: