@@ -5,7 +5,7 @@ DIST axiom-mar2008-src.tgz 206421514 RMD160 b3f55e1e4a4ead181743f14c812bc5ec9229
 DIST axiom-may2008-src.tgz 207172456 RMD160 496c91f00d3b8623c13ea82ee5a95698899a5406 SHA1 51949340f754104c0fa72e269737538829cd9062 SHA256 c91cc50a9a6b9d66b398f8b96236249db72b6ce280d51c188db1805a4534380e
 DIST silver-nov2007-src.tgz 89646725 RMD160 b12d325030e3d9c047f763a46be713a00fd7ac18 SHA1 6a7b609a6b93781872bb239f93aef326185d97c0 SHA256 15389e631ceb1275aafdbceca47052352b6ae9c883fb232caf886c3c0bac90c8
 EBUILD axiom-200711.ebuild 2053 RMD160 0d3eb53d04751183d554cffdedd1bbc6d70922ac SHA1 e1c5c69596ef28284f652f6b82d7f4eacb3764dc SHA256 db80b1b123a5eee3a6ae20b3450dfb61d1011fed4f1389a6f22e1affdc02e1e1
-EBUILD axiom-200803.ebuild 2059 RMD160 631931d50db907e883ff324cf3c8a8c0b16e4a4d SHA1 6408ec297b8b73397f0b0c65e463e6e310212653 SHA256 878b697b986803c9220143ba52aa50f1761f8d0d996985fec3e0f8624dfcce8e
-EBUILD axiom-200805.ebuild 3105 RMD160 59d7716a9c95ff0c05dfb435c72c1dd839273666 SHA1 e0851f2358b3bc0475a8bbc0bedde1337c7b4f8f SHA256 c5b3aa94bc399053f6722038bb31578f6dfce2b4258c130833c8a18e9e9ebd34
-MISC ChangeLog 3600 RMD160 60340757530fbcee88a8ef0e361f4f99e0e2e9dc SHA1 249f599162355da1d707c22b6dda39d1ec9b0c75 SHA256 6fdc2033d61b45c809811002333edc577660844e78047ff7f449ca00f6e4c75d
+EBUILD axiom-200803.ebuild 2081 RMD160 fd92f708a7e00d968f3acb5e51913ca6602c5d19 SHA1 4a1dc1b219d8d209a13bfc58391128a981881e76 SHA256 17f8ed17ce95e7ef1e942e44733ff36944c951367ddfa267887e201997b19229
+EBUILD axiom-200805.ebuild 3126 RMD160 1e9bfccf09391096d19ab727c9da6b99944bd3fe SHA1 92a4a4dc7ea795db681f362214853a5ee5905368 SHA256 f343a877fb00b978cda85fc77a5f33975f90c664a14b3b673feaa6aa9ca3037c
+MISC ChangeLog 3770 RMD160 6802db912464284c86801b5295af28009226f04d SHA1 75922ad19c8e6bb4f08bba1c249cc425bebee8b2 SHA256 7163d1d9dc36c4456d34594f964bdd1a6ec2390f1a7618de438765874acb406d
 MISC metadata.xml 168 RMD160 d98790cf055dc0f820c63d65f485b9dcfa8950f4 SHA1 95c9e4f7368f82053d631bbcd469612c92ca13cb SHA256 c0cc8d6ab9385750af753ddc504299ed90a70b5c4c655f6c77d865917a8829c9
