@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/axiom/axiom-200805.ebuild,v 1.5 2008/07/15 15:52:48 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/axiom/axiom-200805.ebuild,v 1.6 2008/08/30 13:17:33 markusle Exp $
 
 inherit eutils multilib flag-o-matic
 
@@ -19,6 +19,7 @@ RESTRICT="strip"
 
 DEPEND="virtual/latex-base
 	x11-libs/libXaw
+	sys-apps/debianutils
 	sys-process/procps"
 
 S="${WORKDIR}"/${PN}
